# SIRC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  common.h  main.cpp  tcp-udp-ip-test.sln  tcp-udp-ip-test.vcxproj  tcp-udp-ip-test.vcxproj.filters  vcpkg.json
.github/workflows/: build.yml
client/: client.cpp  client.h
server/: server.cpp  server.h
